# nlweb-intern

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  INTERN_SETUP.md  SETUP.md  create_dockerfile_for_hnswlib.sh  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yaml  nginx.conf  run_indexing.sh
code/python/: TODO.md  alembic.ini  app-aiohttp.py  app-file.py  migrate_schema_v2.py  pyproject.toml  requirements-dev.txt  requirements.txt
code/python/alembic/: env.py
code/python/auth/: auth_db.py  auth_service.py  bootstrap_cli.py  email_service.py
code/python/core/: analytics_db.py  audit_service.py  baseHandler.py  bm25.py  config.py  config_loader.py  conversation_history.py  embedding.py  fastTrack.py  guardrail_logger.py  llm.py  mmr.py  openai_http.py  post_ranking.py  prompts.py  qdrant_profile.py  query_logger.py  ranking.py  refactoring_patterns.py  results_cache.py  retriever.py  retry_util.py  router.py  sanitize.py  schema_definitions.py  schemas.py  session_service.py  state.py  user_data_db.py  user_data_manager.py  user_data_processor.py  user_data_retriever.py  user_file_storage.py  whoRanking.py  xgboost_ranker.py
code/python/crawler/: backfill.py  main.py  subprocess_runner.py
code/python/data_loading/: db_load.py
code/python/embedding_providers/: deepinfra_embedding.py  gemini_embedding.py  huggingface_embedding.py  openrouter_embedding.py  qwen3_embedding.py
code/python/indexing/: __init__.py  badfile_guard.py  bulk_load.py  chunking_engine.py  cloud_embed.py  dashboard_api.py  dashboard_server.py  dual_storage.py  embedding.py  pg_batch.py  pipeline.py  poc_chunking.py  poc_length_analysis.py  poc_runner.py  poc_source_analysis.py  postgresql_uploader.py  prepare_test_data.py  qdrant_uploader.py
code/python/jobs/: update_url_stats.py
code/python/llm_providers/: anthropic.py  gemini.py  llm_provider.py  openai.py
code/python/methods/: deep_research.py  generate_answer.py  live_research.py
code/python/models/: test_model_metadata.json
code/python/reasoning/: __init__.py  orchestrator.py  orchestrator_base.py  research_state.py  schemas.py  schemas_enhanced.py  schemas_live.py
code/python/retrieval_providers/: cwb_weather_client.py  global_weather_client.py  google_search_client.py  postgres_client.py  qdrant.py  tw_company_client.py  twse_client.py  user_postgres_provider.py  wikidata_client.py  wikipedia_client.py  yfinance_client.py
code/python/scripts/: cleanup_polluted_session_history.py
code/python/storage_providers/: qdrant_storage.py
code/python/tests/: conftest.py  run_tests.py  test_admin_session_count.py  test_alembic_schema_equivalence.py  test_alembic_users_schema.py  test_analytics_admin_gate.py  test_ask_dr_early_exit.py  test_auth_middleware.py  test_auth_routes_onboarding_cookies.py  test_auth_service.py  test_author_search_honesty.py  test_badfile_guard.py  test_baseHandler_trusted_identity.py  test_bulk_load_harden.py  test_dr_gap_evidence_injection.py  test_dr_private_docs_isolation.py  test_dr_zero_results_web_search.py  test_evidence_pool.py  test_help_routes.py  test_indexing_updates.py  test_llm_api_decisions.py  test_low_relevance_warning.py  test_lr_orchestrator_evidence_flow.py  test_lr_recollect_cap.py  test_lr_recollect_dispatch.py  test_lr_references_block.py  test_lr_reset_to_stage.py  test_lr_revision_intent_recollect.py  test_lr_run_stage_1_seed.py  test_lr_stage_state_recollect.py  test_message_metadata_user_id.py  test_mock_bab_fixture_author_year.py  test_null_byte_sanitize.py  test_org_memberships_unique_migration.py  test_phase_refactor_integration.py  test_research_state.py  test_results_cache_user_isolation.py  test_retry_util.py  test_routes_mcp_a2a_unmounted.py  test_search_user_documents_org_passthrough.py  (+8 more)
code/python/tools/: migrate_live_research.py  migrate_lr_dialog_snapshot.py  smoke_test.py  verify_cov_lr.py  verify_deepinfra_embedding_parity.py  verify_format_spec_extraction.py  verify_l3_critic.py
code/python/training/: __init__.py  export_training_data.py  feature_engineering.py  validate_training_data.py  verify_db_state.py  xgboost_trainer.py
code/python/webserver/: admin_gate.py  aiohttp_server.py  aiohttp_streaming_wrapper.py  analytics_handler.py  mcp_wrapper.py  ranking_analytics_handler.py
docs/: e2etest.md
(+447 files in other folders)
